# pypam

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  LICENCE.txt  README.md  build.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
docs/: explanation.md  index.md  reference.md  usage.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/: pgdfinfo.py
src/pypam/: annotations.py  file.py  gemini.py  module.py  pamdata.py  pgdf.py
src/pypam/util/: byteops.py  checks.py  read.py  time.py
test/pypam/: test_byteops.py  test_pgdf.py
tutorials/: index.html
usage/: index.html
